// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryResultsDataSource query returns data for valid data-output-type query 1`] = `
[
  {
    "fields": [
      {
        "name": "programName",
        "type": "string",
        "values": [
          "My Program Name",
        ],
      },
    ],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`QueryResultsDataSource query returns empty data for invalid query 1`] = `
[
  {
    "fields": [],
    "refId": "A",
  },
]
`;

exports[`QueryResultsDataSource query returns column headers with no data when QueryResults API returns empty array 1`] = `
[
  {
    "fields": [
      {
        "name": "id",
        "type": "string",
        "values": [],
      },
    ],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`QueryResultsDataSource query returns total count for valid total count output type queries 1`] = `
[
  {
    "fields": [
      {
        "name": "A",
        "values": [
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`QueryResultsDataSource query should convert properties to Grafana fields 1`] = `
[
  {
    "name": "programName",
    "type": "string",
    "values": [
      "My Program Name",
    ],
  },
]
`;

exports[`QueryResultsDataSource queryResults returns data when there are valid queries 1`] = `
{
  "results": [
    {
      "id": "000007fb-aa87-4ab9-9757-6568e7893c33",
      "keywords": [
        "keyword1",
        "keyword2",
      ],
      "programName": "My Program Name",
      "totalTimeInSeconds": 29.9,
    },
  ],
  "totalCount": 1,
}
`;
